# speech-integration

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .sourcery.yaml  .taplo.toml  .yamllint.yml  AGENTS.md  LICENSE  Plan - torchtune vendoring.md  README.md  To Do.md  pyproject.toml  requirements.txt
.github/workflows/: claude-code-review.yml  claude.yml  lint.yml  tests.yml
conf/: checkpointer.yaml  common.yaml  cpt.yaml  cptdebug.yaml  generate.yaml  generate_vllm.yaml  sft.yaml  training.yaml  tsne.yaml  wer.yaml
conf/data/: _cpt_base.yaml  _sft_base.yaml  cpt_hubert.yaml  cpt_speechtokenizer.yaml  sft_hubert.yaml  sft_speechtokenizer.yaml
conf/data/cpt/: _base_.yaml  mls-focalcodec.yaml  mls-hubert_large_ll60k-layer_22.yaml  mls-mimi-srvq_0.yaml  mls-speechtokenizer-rvq_0.yaml
conf/data/sft/: _base_.yaml  mls-focalcodec.yaml  mls-hubert_large_ll60k-layer_22.yaml  mls-mimi-srvq_0.yaml  mls-speechtokenizer-rvq_0.yaml
conf/hydra/hydra_logging/: custom.yaml
conf/hydra/job_logging/: custom.yaml
docs/: 0_Setup.md  1_Train.md  2_Generate.md  2_Generate_and_Evaluate.md  3_Evaluate.md  9_Notes.md
evaluation/: generation.py
plans/: Bugfix - CPT Interleave Config Sampling Parameters.md  Checkpointing - Consolidated Plan.md  Feature - Packed Dataset Support.md  Feature - Standalone Sample-Wise Generation.md  Fix B2 - Intra-Epoch Step-Level Resume with Configuration Validation.md  LLaMA 3.2 1B Checkpoint Structure and Embedding Extension.md  MASTER PLAN.md  Migration to uv.md  Plan - Overview.md  Plan for torchtune Vendoring.md  Plan to Simplify Checkpoint Directory Structure.md  Refactor - Separate Model and Training State Checkpoints.md  Refactor - Stateful Trainer Class.md  Reference - Memory in Multi-Worker DataLoaders.md  Reference - Searching Git History.md  Removed - Adapter and LoRA Checkpoint Support.md  Research - Checkpoint and Resume Best Practices.md  Research - Hyperparameter Literature Review (Comprehensive).md  Research - Optimal hyperparameters based on literature review.md  Test Spec - Checkpoint Save and Load.md  Tokenizer Architecture - tiktoken vs HF tokenizer.json.md  Training Cleanup Tasks.md  Verification - Functional vs Stateful Training Equivalence.md  claude-data-critique.md  claude-train-critique.md  training-refactor.md
scripts/: _wer.py  extend_llama3_2.py  generate.py  generate_vllm.py  plot_wandb_losses.py  plt_embed_tsne.py  render_via_prompt.py  tests_gpu.py  train_cpt.py  train_sft.py  train_sft_trainer.py  wer.py
scripts/evaluation/: generate.py  generation.py
snippets/: README.md  check_missing_generations.py  generation_launcher.sh  impute_config.py  inspect_checkpoint.py  run_generate.sbatch  tabulate_dsu_frequencies.py  wer.py
ssi/: checkpoint.py  constants.py  eval.py  finetune.py  generate.py  llama_configs.py  loss.py  lr_schedule.py  metric_logging.py  model.py  optimizer.py  testhydra.py  tokenizer.py  train.py  train_utils.py  trainer.py  utils.py
ssi/conf/: cpt.yaml  debug.yaml  generate.yaml  sft.yaml  train.yaml
ssi/data/: __init__.py  cpt.py  sft.py
ssi/extend_llama3_2/: README.md  __init__.py  constants.py
ssi/tokenizer/: __init__.py  monkeypatch.py
ssi/utils/: lr_schedule.py
tests/: README.md  conftest.py  data_cpt.py  pytest Primer.md  test_checkpoint.py  test_cpt_deterministic_rng.py  test_cpt_equivalence.py  test_equivalence.py  test_equivalence_e2e.py  test_equivalence_e2e_full.py  test_resume_equivalence.py  test_trainer.py  test_trainer_gpu.py  tokenizer.py  verify_full_equivalence.py
tests/regression/: README.md  conftest.py  matrix.yaml  reference_manifest.yaml  test_gpu_training_regression.py  thresholds.yaml
tuna/: finetune.py  finetune.yaml
wip/: generation.py
